[package]
name = "consensource-rest-api"
version = "0.1.0"


[dependencies]
alcoholic_jwt = "1.0.0"
bcrypt = "0.2"
clap = "2"
database = { path = "../database" }
diesel = { version = "1.0.0", features = ["postgres", "r2d2"] }
protobuf = "2.8.1"
reqwest = "0.9.22"
rocket = "0.4.2"
rocket_contrib = "0.4.2"
sawtooth-sdk = "0.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
uuid = { version = "0.7", features = ["v4"] }
hyper = "0.12.0"
http = "0.1"
hyper-tls = "0.3.0"
futures = "0.1"
tokio-core = "0.1"
base64 = "0.9.3"
log = "0.4"
log4rs = "0.8"


# SSE Dependencies
hyper-sse = { git = "https://github.com/adeebahmed/hyper-sse.git", branch = "0.1-no-tokens" }
lazy_static  = "1"
